[tool.poetry]
name = "lineflow"
version = "0.6.6"
description = ""
authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0.0"
gdown = "^4.6.4"
arrayfiles = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers -m 'not slow'"
markers = [
    "slow"
]

[tool.isort]
line_length = 120
